--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,7 +1,74 @@
-.container {
-    position: relative;
-    min-height: 100vh;
+.click-item {
+    background-size: cover;
+    background-position: center;
+    height: 170px;
+    width: 170px;
+    margin: 8px 25px;
+    border: 5px solid yellow;
+    border-radius: 3px;
+    box-shadow: 0 3px 6px gray, 0 3px 6px black;
+    cursor: pointer;
 }
+
+.click-item:hover {
+    transform: scale(1.05);
+    box-shadow: 0 15px 28px rgb(240, 94, 220), 0 10px 10px black;
+    transition: 0.2s;
+}
+
+.shake {
+    animation: shake 0.5s 0.0126s;
+}
+
+@keyframes shake {
+    from,
+    to {
+        transform: translate3d(0,0,0);
+    }    
+    12.5%,
+    37.5%,
+    62.5%,
+    87.5% {
+        transform: translate(-10px);
+    }
+    25%,
+    50%,
+    75% {
+        transform: translate(10px);
+    }
+}
+
+@media (max-width: 750px) {
+    .click-item {
+        margin: 10px;
+    }
+}
+@media (max-width: 500px) {
+    .click-item {
+        margin: 10px;
+    }
+}
+
+.container {
+    /* position: relative;
+    min-height: 100vh; */
+    display: flex;
+    min-height: 80%;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    width: 90%;
+    margin: 0 auto;
+}
+@media (min-width: 1100px) {
+    .container {
+        padding-left: 100px;
+        padding-right: 100px;
+        width: 1100px;
+    }
+}
+  
 .navbar {
     background: red;
     min-height: 10vh;
@@ -19,6 +86,16 @@
     background-color: yellow;
     color: black;
     text-align: center;
+    min-height: 5vh;
+    padding: 30px 10px;
+    padding-bottom: 5vh;
+    text-align: center;
+}
+
+.header h1 {
+    margin: 35px;
+    margin-bottom: 0;
+    font-size: 5rem;
 }
 
 .footer {
