--- a/src/components/style.css
+++ b/src/components/style.css
@@ -183,7 +183,7 @@
     }
 }
 
-@-webkit-keyframes blink {
+@keyframes blink {
     0% { opacity: 1; }
     50% { opacity: 1; }
     50.1% { opacity: 0; }
