--- a/src/components/style.css
+++ b/src/components/style.css
@@ -71,7 +71,9 @@
 }
   
 .navbar {
-    background: rgb(1, 82, 1);
+    background: rgb(80, 129, 68);
+    background-image: "url(/assets/images/banana1.png)";
+    background-size: contain;
     height: 80px;
     width: 100%;
     position: fixed;
@@ -131,7 +133,7 @@
 .footer {
     height: 100px;
     position: relative;
-    color: white;
+    color: rgb(7, 234, 250);
     overflow: auto;
 }
 
@@ -140,14 +142,16 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background: rgb(1, 82, 1);
+    background: rgb(80, 129, 68);
+    background-image: "url(/assets/images/banana1.png)";
+    background-size: contain;
     padding: 10px;
     font-weight: 600;
     text-align: center;
 }
 
 .github-link {
-    color: white;
+    color: rgb(7, 234, 250);
 }
 
 .github-link:hover {
